--- a/.github/workflows/main_nmamit.yml
+++ b/.github/workflows/main_nmamit.yml
@@ -23,9 +23,12 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          npm init
+          
           npm install
+          npm install tedious
           npm run build --if-present
-          npm run test --if-present
+        
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
