--- a/.github/workflows/main_nmamit.yml
+++ b/.github/workflows/main_nmamit.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           npm install
           npm install tedious
+          npm install dotenv
           npm run build --if-present
         
 
