--- a/.github/workflows/main_nmamit.yml
+++ b/.github/workflows/main_nmamit.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           npm install
           npm install tedious
+          npm install dotenv
           npm run build --if-present
         
 
