--- a/.github/workflows/main_nmamit.yml
+++ b/.github/workflows/main_nmamit.yml
@@ -7,7 +7,7 @@ name: Build and deploy Node.js app to Azure Web App - nmamit
 on:
   push:
     branches:
-      - main
+      - test
   workflow_dispatch:
 
 jobs:
